--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -33,7 +33,7 @@ jobs:
         gcloud auth configure-docker us-west2-docker.pkg.dev --quiet
     - name: Push Docker Image to Container Registry (GCR)
       env:
-        GIT_TAG: v0.1.0
+        GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
         docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
@@ -41,7 +41,7 @@ jobs:
         docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
     - name: Push Docker Image to Artifact Registry
       env:
-        GIT_TAG: v0.1.0
+        GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
         docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
         docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
